[project]
name = "tzam"
version = "0.2.0"
description = "Official Python client for the Tzam Identity Provider"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tzam-St" }]
keywords = ["auth", "authentication", "oidc", "oauth2", "tzam", "identity-provider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # httpx covers both sync and async HTTP without pulling in requests + aiohttp
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://tzam.online"
Documentation = "https://tzam.online/docs/sdks/python"
Source = "https://github.com/Tzam-St/tzam-py"
Issues = "https://github.com/Tzam-St/tzam-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tzam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
